[tool.poetry]
name = "harmony-api"
version = "0.1.0"
description = "Music info API"
authors = ["SherlockH0 <ddmlf7@gmail.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.1"
djangorestframework = "^3.15.2"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
